--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-id-swiper": "^4.0.0",
+    "react-router-dom": "^7.1.1",
     "react-scripts": "^5.0.1",
+    "react-typewriter-effect": "^1.1.0",
     "swiper": "^9.3.2",
     "web-vitals": "^2.1.4"
   },
